Update Elasticsearch document and update jvm option