@@ -3,7 +3,7 @@
 - RESTful な API を提供する分散型検索/分析エンジン
 - データを格納する DB としても動作する
 
-Elasticsearch Container Image として `docker.elastic.co/elasticsearch/elasticsearch:7.6.0` を使っている。
+Elasticsearch Container Image として `docker.elastic.co/elasticsearch/elasticsearch:7.6.1` を使っている。
 
 ## Settings
 
@@ -13,57 +13,47 @@ Elasticsearch Container Image として `docker.elastic.co/elasticsearch/elastic
 
 ```yaml
 environment:
+  bootstrap.memory_lock: "true"
   discovery.type: "single-node"
   ELASTIC_PASSWORD: "media_elasticsearch_passwd"
-  ES_JAVA_OPTS: "-Xms512m -Xmx512m" # TODO for development
+  ES_JAVA_OPTS: "-Xms1g -Xmx16g -Xlog:disable -Xlog:all=warning:stderr:utctime,level,tags -Xlog:gc=warning:stderr:utctime"
+  TAKE_FILE_OWNERSHIP: "true"
 ```
 
-また、 `./elasticsearch.yml` において、primary/replicate shard の数を指定している。この file は container 内において `/etc/elasticsearch/elasticsearch.yml` に mount されている。
-
-```yaml
-index.number_of_shards: 1
-index.number_of_replicas: 0
-```
-
----
-
-Elasticsearch のために Host Server の Kernel Option をする必要がある。
-
-```bash
-$ sysctl -w vm.max_map_count=262144
-```
+また、 `./elasticsearch.yml` や `./log4j2.properties` においてもいくつかの設定を行い、Container 内の `/usr/share/elasticsearch/config` 内に mount している。
 
 ## REST API
 
-Docker の port mount として以下の設定を使用している。
+Port を bind していないため、Host Machine から REST API Request を送ることは出来ない。もし、送りたい場合は、下記の記述を `docker-compose.yml` に追加する。
 
 ```yaml
 ports:
-  - 9200:9200 # TODO for development
-  - 9300:9300 # TODO for development
+  - 9200:9200
+  - 9300:9300
 ```
 
-そのため、Host Server からは `localhost:9200` で REST API にリクエストを送ることが出来る。
+または、docker-compose において、それぞれの Container 間で同一の Docker Network を使用しているため、MeDIA Web Container から `db:9200` で REST API リクエストを送ることが出来る。
 
-また、docker-compose において、それぞれの container で同一の Docker Network を使用しているため、MeDIA CLI や MeDIA Web container からは `db:9200` で REST API にリクエストを送ることが出来る。
+```yaml
+$ docker-compose exec app curl http://db:9200/
+```
 
 ## 動作確認
 
 [Elasticsearch 公式 API 仕様](https://www.elastic.co/guide/en/elasticsearch/reference/master/docs.html)
 
 ```bash
-# 起動確認
-$ curl -X GET http://localhost:9200/
+$ docker-compose exec app curl http://db:9200/
 {
-  "name" : "a73e54246b27",
+  "name" : "aeb36f253c49",
   "cluster_name" : "docker-cluster",
-  "cluster_uuid" : "2olHWpcfRPuDhKP7vn5pUg",
+  "cluster_uuid" : "AB1SuJZOQjmJID530qogSw",
   "version" : {
-    "number" : "7.6.0",
+    "number" : "7.6.1",
     "build_flavor" : "default",
     "build_type" : "docker",
-    "build_hash" : "7f634e9f44834fbc12724506cc1da681b0c3b1e3",
-    "build_date" : "2020-02-06T00:09:00.449973Z",
+    "build_hash" : "aa751e09be0a5072e8570670309b1f12348f023b",
+    "build_date" : "2020-02-29T00:15:25.529771Z",
     "build_snapshot" : false,
     "lucene_version" : "8.4.0",
     "minimum_wire_compatibility_version" : "6.8.0",
@@ -71,25 +61,7 @@ $ curl -X GET http://localhost:9200/
   },
   "tagline" : "You Know, for Search"
 }
-
-# Cluster の状態確認
-$ curl -X GET http://localhost:9200/_cat/health?v
-epoch      timestamp cluster        status node.total node.data shards pri relo init unassign pending_tasks max_task_wait_time active_shards_percent
-1582184374 07:39:34  docker-cluster green           1         1      7   7    0    0        0             0                  -                100.0%
-
-# Index 一覧
-$ curl -X GET http://localhost:9200/_cat/indices?v
-health status index                    uuid                   pri rep docs.count docs.deleted store.size pri.store.size
-green  open   data                     dGx1zW5mQZipkhDMUsCqlw   1   0       2279            0    676.5kb        676.5kb
-green  open   .kibana_task_manager_1   KwmyiWD6SW-uwaUZa_daAQ   1   0          2            1     29.7kb         29.7kb
-green  open   patient                  GxlFAjOsQ2CKUA0MugQYjA   1   0        100            0     19.9kb         19.9kb
-green  open   .apm-agent-configuration bZrS5Eg3TBG11Xoh72R-CA   1   0          0            0       283b           283b
-green  open   project_patient          meJ8VHY8SqaKDYxebqzYyQ   1   0        900            0    131.8kb        131.8kb
-green  open   project                  zg6Z3297TWS7FBbmPIG5MQ   1   0          9            0      4.9kb          4.9kb
-green  open   .kibana_1                JNFfWkEVQbOfPqfiL7AXPA   1   0         10            4     25.8kb         25.8kb
 ```
-
-Index は Kibana 起動時や MeDIA CLI での data load 時に自動的に作成される。そのため、初期起動時は存在しない。
 
 ## 初期化
 
@@ -97,6 +69,10 @@ Host Server 側の `./data` を Container 側の `/usr/share/elasticsearch/data`
 
 Data を初期化したい場合は、以下の Dir を削除すれば良い
 
-## Log
+```bash
+# 消去される file, dir の確認
+`$ git clean -nd Elasticsearch
 
-Host Server 側の `./log` を Container 側の `/usr/share/elasticsearch/logs` に mount している。
+# 消去
+`$ git clean -fd Elasticsearch
+```
